# fields-of-the-planet

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  README_S3.md  REVIEW.md  pyproject.toml
.github/workflows/: ci.yaml  pages.yml  release.yml
app/: index.html
configs/: ftw_s2_efnet3_256_prueplus.yaml  train.yaml
configs/prue/: ftw_joint_efnet3_crop512_v3_augmax_full.yaml  ftw_joint_efnet3_crop512_v3_augmax_full_gsd.yaml  ftw_joint_efnet3_crop512_v3_augmax_full_s2init.yaml  ftw_joint_paired_vicreg_efnet3.yaml  ftw_planet_efnet3.yaml  ftw_planet_efnet3_cldice.yaml  ftw_planet_efnet3_crop512.yaml  ftw_planet_efnet3_crop512_boundary.yaml  ftw_planet_efnet3_crop512_cldice.yaml  ftw_planet_efnet3_crop512_curriculum.yaml  ftw_planet_efnet3_crop512_framefield.yaml  ftw_planet_efnet3_crop512_sdf.yaml  ftw_planet_efnet3_crop512_v2_augplus.yaml  ftw_planet_efnet3_crop512_v2_baseline.yaml  ftw_planet_efnet3_crop512_v2_cutmix.yaml  ftw_planet_efnet3_crop512_v3_augmax.yaml  ftw_planet_efnet3_crop512_v3_augmax_full.yaml  ftw_planet_efnet3_crop512_v3_augmax_full_sdf.yaml  ftw_planet_efnet3_crop512_v3_augmax_replicate.yaml  ftw_planet_efnet3_crop512_v3_augmax_sdf.yaml  ftw_planet_efnet3_crop512_v3_augplus.yaml  ftw_planet_efnet5_crop512_sdf.yaml  ftw_planet_efnet7_crop512_sdf.yaml  ftw_planet_efnet7_crop512_v3_augmax.yaml  ftw_planet_efnet7_crop512_v3_augmax_full.yaml  ftw_planet_efnet7_crop512_v3_augmax_sdf.yaml  ftw_s2_efnet3_crop256_v3_augmax.yaml  ftw_s2_efnet3_crop512_upsampled_augmax_full.yaml  ftw_s2_efnet7_crop256_v3_augmax.yaml  ftw_s2_efnet7_crop256_v3_augmax_full.yaml  ftw_s2_efnet7_crop512_upsampled_augmax_full.yaml
docs/: DATASET.md  REPRODUCE.md  global-inference-sizing.md  planet-api-issues.md  profiling.md
hpc/: activate.sbatch  area_bin_eval.sbatch  area_bins_per_country.sbatch  build_dataset_index.sbatch  clip_polygons.sbatch  copy_shared_planet.sbatch  download_ftw.sbatch  eval_delineate_anything.sbatch  eval_prue.sbatch  eval_s2_augmax_upsample.sbatch  eval_s2_upsampled.sbatch  eval_s2_upsampled_b7.sbatch  extract.sbatch  germany_diagnostic.sbatch  gsd_controlled_eval.sbatch  improvement_figure.sbatch  manifest.sbatch  metric_example.sbatch  migrate_to_ftw_layout.sbatch  pack_country_tars.sbatch  per_patch_bins.sbatch  per_patch_eval.sbatch  polygon_metrics_eval.sbatch  polygon_metrics_truegt.sbatch  postproc_eval.sbatch  postproc_upsample_eval.sbatch  precompute_aligned_planet.sbatch  qual_delineate.sbatch  qualitative_regen.sbatch  rasterize_labels.sbatch  regen_qual.sbatch  regen_qual_main.sbatch  regen_qual_raw_appendix.sbatch  regen_qual_v6.sbatch  repack_labels_nbits.sbatch  reprocess_tifs.sbatch  reserve_h100.sbatch  resolution_ablation.sbatch  s2_native_eval.sbatch  search.sbatch  (+8 more)
paper/: Makefile  ieee_fullname.bst  latexmkrc  main.tex  make_appendix_bmg.py  make_appendix_figs.py  make_aug_ablation_fig.py  make_figures.py  make_hero.py  make_per_country_bars.py  make_qualitative.py  make_s2_comparison.py  references.bib  refs.bib  supplementary.tex  wacv.sty
paper/figs/: area_bins.tex  full_data_compare.tex  heldout_per_country.tex  heldout_results.tex  pad_ablation.tex  polygon_metrics.tex  representation_ceiling.tex  resolution_ablation.tex  results_table.tex  s2_vs_planet_iou.csv  s2_vs_planet_per_country.tex  s2_vs_planet_table.tex
paper/reviews/: codex_paper_review.md
paper/scripts/: PROVENANCE.md  _aggregate.py  area_bins_table.py  aug_ablation.py  aug_ablation_data.py  build_tables.py  full_data_table.py  heldout_per_country_table.py  heldout_results_table.py  hero.py  improvement_figure.py  make_appendix_figs.py  make_area_bins_table.py  make_aug_ablation_fig.py  make_aug_ablation_paper.py  make_coverage_maps.py  make_figures.py  make_full_data_compare.py  make_germany_diagnostic.py  make_ggfigures.py  make_heldout_per_country.py  make_heldout_results.py  make_hero.py  make_hero_v2.py  make_improvement_figure.py  make_metric_example.py  (+33 more)
scripts/: README.md  activate_global.py  bench_e2e.py  bench_fullscene.py  bench_gpu_decode.py  bench_h100.py  bench_pretiled.py  bench_scene.py  build_dataset_index.py  build_manifest.py  build_scene.py  dedupe_label_files.py  eval_delineate_anything.py  eval_planet.py  evaluate.py  migrate_to_ftw_layout.py  pack_country_tars.py  polygon_metrics_eval.py  postprocess_eval.py  precompute_aligned_planet.py  prototype_gpu_readpath.py  rasterize_labels.py  repack_labels_nbits.py  reprocess_tifs.py  resample_cloudy.py  resample_v2.py  train.py  udm2_fill.py  udm2_quality.py  validate_refs.py  viz_predictions.py
slides/: Makefile  main.tex
slides-js/: AGENTS.md  Makefile  README.md  biome.json  mdx-components.tsx  next.config.mjs  package.json  tsconfig.json
tests/: conftest.py  test_cli.py  test_example.py
web/: index.html
(+122 files in other folders)
